--- a/fqctapp.conf
+++ b/fqctapp.conf
@@ -1,2 +1,2 @@
-番茄畅听
+#番茄畅听
 luckycat/novel_fm/v1/task/sign_in/* url script-request-header https://cdn.jsdelivr.net/gh/bluesmallpig/scripts/fqctapp.js
