--- a/jrttjsb.conf
+++ b/jrttjsb.conf
@@ -1,4 +1,4 @@
-hostname = api3-normal-lq.toutiaoapi.com
+hostname = *.toutiaoapi.com, *.snssdk.com
 
 #今日头条极速版
-luckycat/lite/v1/task/page_data url script-request-header https://raw.githubusercontent.com/leafxcy/JavaScript/main/jrttjsb.js
+luckycat\/lite\/v1\/task\/page_data url script-request-header https://raw.githubusercontent.com/leafxcy/JavaScript/main/jrttjsb.js
