--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = *.biliapi.*, *.bilibili.* , *.youbangjiazheng.com , apiw.9waquan.com , app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com ,  *.chuniao.* , 
+hostname = *.biliapi.*, *.bilibili.* , *.youbangjiazheng.com , apiw.9waquan.com , app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com ,  *.chuniao.* , buy.itunes.apple.com , 
 
 #哔哩哔哩解锁大会员
 ^http[s]?:\/\/((app|api)\.(\w{2,15})?\.(com|cn)).*player\.(v3|v2|v1).Play(URL|View).*$ url script-request-header https://raw.githubusercontent.com/WeiRen0/QuantumultX-weiren/main/blbl.js
@@ -15,3 +15,6 @@ hostname = *.biliapi.*, *.bilibili.* , *.youbangjiazheng.com , apiw.9waquan.com 
 
 # 雏鸟短视频解锁会员
 ^https?:\/\/.+\.chuniao\..+\/app\/api\/.+ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/CNSPCrack.js
+
+# PlaneVPN解锁订阅
+^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/PlaneVPNProCrack.js
