--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = *.youbangjiazheng.com , apiw.9waquan.com , app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com ,  *.chuniao.* , buy.itunes.apple.com , 
+hostname = *.youbangjiazheng.com , apiw.9waquan.com , app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com ,  *.chuniao.* , buy.itunes.apple.com , notability.com ,
 
 # 蜜桃视频解锁无限次数
 \/t\w{4}\/\d\/t\/ url 307 /token/aa1dceb9b04740e2c09623342303c6ef/t/
@@ -15,3 +15,6 @@ hostname = *.youbangjiazheng.com , apiw.9waquan.com , app.weilaixushi.com, api.o
 
 # PlaneVPN解锁订阅
 ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/PlaneVPNProCrack.js
+
+# Notability解锁订阅
+^https?:\/\/notability\.com\/subscriptions url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NotabilityProCrack.js
