--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = *.youbangjiazheng.com , apiw.9waquan.com , app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com ,  *.chuniao.* , buy.itunes.apple.com , notability.com , api.shouzhang.com ,
+hostname = *.youbangjiazheng.com , apiw.9waquan.com , app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com ,  *.chuniao.* , buy.itunes.apple.com , notability.com ,
 
 # 蜜桃视频解锁无限次数
 \/t\w{4}\/\d\/t\/ url 307 /token/aa1dceb9b04740e2c09623342303c6ef/t/
@@ -18,8 +18,3 @@ hostname = *.youbangjiazheng.com , apiw.9waquan.com , app.weilaixushi.com, api.o
 
 # Notability解锁订阅
 ^https?:\/\/notability\.com\/subscriptions url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NotabilityProCrack.js
-
-#时光手账
-^https:W/api.shouzhang.com/memcenterikV
-memberVfirstpage.do url script-responsebody
-https://raw.githubusercontent.comddgksf2013/Cuttlefish/master/Crack/sgsz.js
