--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = *.youbangjiazheng.com , apiw.9waquan.com , app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com ,  *.chuniao.* , buy.itunes.apple.com , notability.com ,
+hostname = *.youbangjiazheng.com , apiw.9waquan.com , app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com ,  *.chuniao.* , buy.itunes.apple.com , notability.com , gw.aoscdn.com , 
 
 # 蜜桃视频解锁无限次数
 \/t\w{4}\/\d\/t\/ url 307 /token/aa1dceb9b04740e2c09623342303c6ef/t/
@@ -18,3 +18,6 @@ hostname = *.youbangjiazheng.com , apiw.9waquan.com , app.weilaixushi.com, api.o
 
 # Notability解锁订阅
 ^https?:\/\/notability\.com\/subscriptions url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NotabilityProCrack.js
+
+# 傲软抠图解锁会员
+^https?:\/\/gw\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/BackgroundEraserProCrack.js
