--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = *.youbangjiazheng.com , apiw.9waquan.com , app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com ,  *.chuniao.* , buy.itunes.apple.com , notability.com , gw.aoscdn.com , 
+hostname = *.youbangjiazheng.com , apiw.9waquan.com , app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com ,  *.chuniao.* , buy.itunes.apple.com , notability.com , gw.aoscdn.com , ap?.bilibili.com ,
 
 # 蜜桃视频解锁无限次数
 \/t\w{4}\/\d\/t\/ url 307 /token/aa1dceb9b04740e2c09623342303c6ef/t/
@@ -21,3 +21,8 @@ hostname = *.youbangjiazheng.com , apiw.9waquan.com , app.weilaixushi.com, api.o
 
 # 傲软抠图解锁会员
 ^https?:\/\/gw\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/BackgroundEraserProCrack.js
+
+^https:\/\/ap(p|i)\.bilibili\.com\/(pgc\/view\/(v\d\/)?app|x(\/v\d)?\/view\/video)\/(season|online)\?access_key url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
+
+#可选, 适用于搜索指定地区的番剧
+^https:\/\/app\.bilibili\.com\/x\/v\d\/search(\/type)?\?.+?%20(%E6%B8%AF|%E5%8F%B0|%E4%B8%AD)& url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
