--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = *.youbangjiazheng.com, apiw.9waquan.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com,  *.chuniao.*, buy.itunes.apple.com, notability.com, gw.aoscdn.com,
+hostname = *.youbangjiazheng.com, apiw.9waquan.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com,  *.chuniao.*, buy.itunes.apple.com, notability.com, gw.aoscdn.com, *.baidu.com, 
 
 # 蜜桃视频解锁无限次数
 \/t\w{4}\/\d\/t\/ url 307 /token/aa1dceb9b04740e2c09623342303c6ef/t/
@@ -21,3 +21,6 @@ hostname = *.youbangjiazheng.com, apiw.9waquan.com, app.weilaixushi.com, api.ori
 
 # 傲软抠图解锁会员
 ^https?:\/\/gw\.aoscdn\.com\/base\/vip\/client\/authorizations$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/BackgroundEraserProCrack.js
+
+# 百度不跳转
+^https?:\/\/.*\.baidu\.com\/.+ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/Purity/DisableBaiduJumpAction.js
