--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = *.youbangjiazheng.com, apiw.9waquan.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com,  *.chuniao.*, buy.itunes.apple.com, notability.com, gw.aoscdn.com, *.baidu.com, 
+hostname = *.youbangjiazheng.com, apiw.9waquan.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com,  *.chuniao.*, buy.itunes.apple.com, notability.com, gw.aoscdn.com, *.baidu.com, api.shouzhang.com,
 
 # 蜜桃视频解锁无限次数
 \/t\w{4}\/\d\/t\/ url 307 /token/aa1dceb9b04740e2c09623342303c6ef/t/
@@ -24,3 +24,6 @@ hostname = *.youbangjiazheng.com, apiw.9waquan.com, app.weilaixushi.com, api.ori
 
 # 百度不跳转
 ^https?:\/\/.*\.baidu\.com\/.+ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/Purity/DisableBaiduJumpAction.js
+
+# > 时光手账（20211222）
+^https:\/\/api.shouzhang.com\/memcenterlk\/member\/firstpage.do url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/sgsz.js
