--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = *.youbangjiazheng.com, apiw.9waquan.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com,  *.chuniao.*, buy.itunes.apple.com, notability.com, gw.aoscdn.com, *.baidu.com, api.shouzhang.com, *.gotokeep.com, *.snssdk.com, mp.weixin.qq.com, 
+hostname = *.youbangjiazheng.com, apiw.9waquan.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com,  *.chuniao.*, buy.itunes.apple.com, notability.com, gw.aoscdn.com, *.baidu.com, api.shouzhang.com, *.gotokeep.com, *.snssdk.com, mp.weixin.qq.com, txv04.com, 
 
 # 蜜桃视频解锁无限次数
 \/t\w{4}\/\d\/t\/ url 307 /token/aa1dceb9b04740e2c09623342303c6ef/t/
@@ -36,3 +36,6 @@ hostname = *.youbangjiazheng.com, apiw.9waquan.com, app.weilaixushi.com, api.ori
 
 #微信 去除公众号文章底部广告
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
+
+# 糖心VLog网页版解锁会员
+^https?:\/\/txv04\.com\/h5\/user\/findQrcode$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/TXVWCrack.js
