--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = *.youbangjiazheng.com, apiw.9waquan.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com,  *.chuniao.*, buy.itunes.apple.com, notability.com, gw.aoscdn.com, *.baidu.com, api.shouzhang.com, *.gotokeep.com, *.snssdk.com, mp.weixin.qq.com, txv04.com, 
+hostname = *.youbangjiazheng.com, apiw.9waquan.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com,  *.chuniao.*, buy.itunes.apple.com, notability.com, gw.aoscdn.com, *.baidu.com, api.shouzhang.com, *.gotokeep.com, *.snssdk.com, mp.weixin.qq.com, txv04.com, appa.lingdu2019.cn, 
 
 # 蜜桃视频解锁无限次数
 \/t\w{4}\/\d\/t\/ url 307 /token/aa1dceb9b04740e2c09623342303c6ef/t/
@@ -39,3 +39,6 @@ hostname = *.youbangjiazheng.com, apiw.9waquan.com, app.weilaixushi.com, api.ori
 
 # 糖心VLog网页版解锁会员
 ^https?:\/\/txv04\.com\/h5\/user\/findQrcode$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/TXVWCrack.js
+
+# > 绅士摄影解锁会员
+^https?:\/\/appa\.lingdu2019\.cn\/api\/(my_home\/\w{9}|portrait\/\w{15,23}|iport/luffy/api/\w{7}/\w{9}|send\/\w{18})$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LingDuPortraitProCrack.js
