--- a/vlp.conf
+++ b/vlp.conf
@@ -1,5 +1,5 @@
 hostname = appa.lingdu2019.cn, txv04.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, *.youbangjiazheng.com, apiw.9waquan.com, *.chuniao.*, notability.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com, api.0954auto.com, api.(md-ddd1|yh-bzd).com, mp.weixin.qq.com, *.snssdk.com, sub.store
-simple_cert_hostname=sub.store, *.googlevideo.com,s.youtube.com,www.youtube.com,youtubei.googleapis.com, 
+simple_cert_hostname=sub.store, *.googlevideo.com,s.youtube.com,www.youtube.com,youtubei.googleapis.com, api.youyu*, 
 
 # > 绅士摄影解锁会员
 ^https?:\/\/appa\.lingdu2019\.cn\/api\/(my_home\/\w{9}|portrait\/\w{15,23}|iport/luffy/api/\w{7}/\w{9}|send\/\w{18})$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LingDuPortraitProCrack.js
@@ -55,3 +55,6 @@ simple_cert_hostname=sub.store, *.googlevideo.com,s.youtube.com,www.youtube.com,
 ^https?:\/\/.+\.youtube\.com\/api\/stats\/.+adformat url reject-img
 ^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-img
 ^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
+
+# > 鱿鱼视频解锁会员
+^https?:\/\/api\.youyu.*\/api\/account\/loginBy(Phone|Password)$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/YYSPCrack.js
