--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = appa.lingdu2019.cn, txv04.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, *.youbangjiazheng.com, apiw.9waquan.com, *.chuniao.*, notability.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com, api.0954auto.com, api.(md-ddd1|yh-bzd).com, mp.weixin.qq.com, *.snssdk.com, sub.storesimple_cert_hostname=sub.store, *.googlevideo.com, s.youtube.com, www.youtube.com, youtubei.googleapis.com, api.youyu*, 
+hostname = appa.lingdu2019.cn, txv04.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, *.youbangjiazheng.com, apiw.9waquan.com, *.chuniao.*, notability.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com, api.0954auto.com, api.(md-ddd1|yh-bzd).com, mp.weixin.qq.com, *.snssdk.com, api.youyu*, 
 
 # > 绅士摄影解锁会员
 ^https?:\/\/appa\.lingdu2019\.cn\/api\/(my_home\/\w{9}|portrait\/\w{15,23}|iport/luffy/api/\w{7}/\w{9}|send\/\w{18})$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LingDuPortraitProCrack.js
@@ -39,21 +39,6 @@ hostname = appa.lingdu2019.cn, txv04.com, *.baidu.com, gw.aoscdn.com, buy.itunes
 
 #皮皮虾去广告和水印
 ^https?://.*\.snssdk\.com/bds/(feed/stream|comment/cell_reply|cell/cell_comment|cell/detail|ward/list|user/favorite|user/cell_coment|user/cell_userfeed|user/publish_list) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Super.js
-
-#sub.store
-^https?:\/\/sub\.store url script-analyze-echo-response https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/sub-store.min.js
-
-#YouTuBe去广告
-^https?:\/\/.+\.googlevideo\.com\/.+&oad url reject-img
-^https?:\/\/.+\.googlevideo\.com\/.+ctier url reject-img
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+ad_ url reject-img
-^https?:\/\/youtubei\.googleapis\.com\/youtubei\/.+log_ url reject-img
-^https?:\/\/.+\.youtube\.com\/get_midroll_ url reject-img
-^https?:\/\/premiumyva\.appspot\.com\/vmclickstoadvertisersite url reject-img
-^https?:\/\/.+\.youtube\.com\/api\/stats\/ads url reject-img
-^https?:\/\/.+\.youtube\.com\/api\/stats\/.+adformat url reject-img
-^https?:\/\/.+\.youtube\.com\/pagead\/ url reject-img
-^https?:\/\/.+\.youtube\.com\/ptracking url reject-img
 
 # > 鱿鱼视频解锁会员
 ^https?:\/\/api\.youyu.*\/api\/account\/loginBy(Phone|Password)$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/YYSPCrack.js
