--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = appa.lingdu2019.cn, txv04.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, *.youbangjiazheng.com, apiw.9waquan.com, *.chuniao.*, notability.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com, api.0954auto.com, api.(md-ddd1|yh-bzd).com, mp.weixin.qq.com, *.snssdk.com, api.youyu*, api.mtaoapi006.com:8080, shapi.dmg1818.com, m.pearkin.com, www.shencut.com,
+hostname = appa.lingdu2019.cn, txv04.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, *.youbangjiazheng.com, apiw.9waquan.com, *.chuniao.*, notability.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com, api.0954auto.com, api.(md-ddd1|yh-bzd).com, mp.weixin.qq.com, *.snssdk.com, api.youyu*,
 
 # > 绅士摄影解锁会员
 ^https?:\/\/appa\.lingdu2019\.cn\/api\/(my_home\/\w{9}|portrait\/\w{15,23}|iport/luffy/api/\w{7}/\w{9}|send\/\w{18})$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LingDuPortraitProCrack.js
@@ -42,15 +42,3 @@ hostname = appa.lingdu2019.cn, txv04.com, *.baidu.com, gw.aoscdn.com, buy.itunes
 
 # > 鱿鱼视频解锁会员
 ^https?:\/\/api\.youyu.*\/api\/account\/loginBy(Phone|Password)$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/YYSPCrack.js
-
-#水蜜桃破解VIP
-^http:\/\/api\.mtaoapi006\.com:8080\/api\.php\/api\/users\/getBaseInfo url script-response-body smtvip.js
-
-#破解app 神话永久会员
-^https:\/\/shapi\.dmg1818\.com\/api\/video\/user\/data url script-response-body dmg1818.js
-
-#圈X pear解锁会员
-^https:\/\/m\.pearkin\.com\/api\/(movie\/WatchMovie|account\/IsVip|Account\/CheckVip|account\/IndexDetail|account\/IsSafeUser|PictureSet\/LookPhoto|account\/Milk|video\/watch.*|video\/WatchCount|account\/UserSetting) url script-response-body pear.js
-
-#万兴喵影解锁VIP
-^https:\/\/www\.shencut\.com\/api\/.+\/user\/profile url script-response-body wxmy.js
