--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = appa.lingdu2019.cn, txv04.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, *.youbangjiazheng.com, apiw.9waquan.com, *.chuniao.*, notability.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com, api.0954auto.com, api.(md-ddd1|yh-bzd).com, mp.weixin.qq.com, *.snssdk.com, api.youyu*,
+hostname = appa.lingdu2019.cn, txv04.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, *.youbangjiazheng.com, apiw.9waquan.com, *.chuniao.*, notability.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com, api.0954auto.com, api.(md-ddd1|yh-bzd).com, mp.weixin.qq.com, *.snssdk.com, api.youyu*, api.revenuecat.com, 
 
 # > 绅士摄影解锁会员
 ^https?:\/\/appa\.lingdu2019\.cn\/api\/(my_home\/\w{9}|portrait\/\w{15,23}|iport/luffy/api/\w{7}/\w{9}|send\/\w{18})$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LingDuPortraitProCrack.js
@@ -42,3 +42,6 @@ hostname = appa.lingdu2019.cn, txv04.com, *.baidu.com, gw.aoscdn.com, buy.itunes
 
 # > 鱿鱼视频解锁会员
 ^https?:\/\/api\.youyu.*\/api\/account\/loginBy(Phone|Password)$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/YYSPCrack.js
+
+#Gear解锁会员永久
+^https\:\/\/api.revenuecat.com\/v1\/subscribers(.+) url script-response-body https://raw.githubusercontent.com/ThorJsbox/QuanX/master/Rewrite_local/Gearpro.js
