--- a/vlp.conf
+++ b/vlp.conf
@@ -1,4 +1,4 @@
-hostname = appa.lingdu2019.cn, txv04.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, *.youbangjiazheng.com, apiw.9waquan.com, *.chuniao.*, notability.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com, api.0954auto.com, api.(md-ddd1|yh-bzd).com, mp.weixin.qq.com, *.snssdk.com, api.youyu*, api.revenuecat.com, tagit.hyhuo.com, api.rr.tv, h5.502you.me, 
+hostname = appa.lingdu2019.cn, txv04.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, *.youbangjiazheng.com, apiw.9waquan.com, *.chuniao.*, notability.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com, api.0954auto.com, api.(md-ddd1|yh-bzd).com, mp.weixin.qq.com, *.snssdk.com, api.youyu*, api.revenuecat.com, tagit.hyhuo.com, api.rr.tv, h5.502you.me, *.kuwo.cn, 
 
 # > 绅士摄影解锁会员
 ^https?:\/\/appa\.lingdu2019\.cn\/api\/(my_home\/\w{9}|portrait\/\w{15,23}|iport/luffy/api/\w{7}/\w{9}|send\/\w{18})$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LingDuPortraitProCrack.js
@@ -56,3 +56,6 @@ hostname = appa.lingdu2019.cn, txv04.com, *.baidu.com, gw.aoscdn.com, buy.itunes
 
 # > 69萝莉解锁会员
 ^https?:\/\/h5\.502you\.me\/h5\/login\/loginAccount$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LLSPCrack.js
+
+# 解锁酷我音乐会员➕听书
+^http://(.+).kuwo.cn(/v2/api/user/info|/a.p|/vip/v2/user/vip) url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/kwyy.js
