--- a/vlp.conf
+++ b/vlp.conf
@@ -1,10 +1,14 @@
-hostname = appa.lingdu2019.cn, txv04.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, *.youbangjiazheng.com, apiw.9waquan.com, *.chuniao.*, notability.com, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com, api.0954auto.com, api.(md-ddd1|yh-bzd).com, mp.weixin.qq.com, *.snssdk.com, api.youyu*, api.revenuecat.com, tagit.hyhuo.com, api.rr.tv, h5.502you.me, *.kuwo.cn, nomo.dafork.com, 
+hostname = nomo.dafork.com, *.kuwo.cn, tagit.hyhuo.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, ap?.bilibili.com, notability.com, buy.itunes.apple.com, mp.weixin.qq.com, *.snssdk.com, api.revenuecat.com, api.rr.tv, sub.store
+simple_cert_hostname=sub.store, 
 
-# > 绅士摄影解锁会员
-^https?:\/\/appa\.lingdu2019\.cn\/api\/(my_home\/\w{9}|portrait\/\w{15,23}|iport/luffy/api/\w{7}/\w{9}|send\/\w{18})$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LingDuPortraitProCrack.js
+ # > NOMO CAM 解锁订阅
+^https?:\/\/nomo\.dafork\.com\/api\/v3\/register\/phone_signin$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NoMoCamProCrack.js
 
-# 糖心VLog网页版解锁会员
-^https?:\/\/txv04\.com\/h5\/user\/findQrcode$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/TXVWCrack.js
+# 解锁酷我音乐会员➕听书
+^http://(.+).kuwo.cn(/v2/api/user/info|/a.p|/vip/v2/user/vip) url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/kwyy.js
+
+# > 拦截100解锁超级会员
+^https?:\/\/tagit\.hyhuo\.com\/cypt\/block100\/get_vip_info$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/Block100SVIPCrack.js
 
 # 百度不跳转
 ^https?:\/\/.*\.baidu\.com\/.+ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/Purity/DisableBaiduJumpAction.js
@@ -15,50 +19,30 @@ hostname = appa.lingdu2019.cn, txv04.com, *.baidu.com, gw.aoscdn.com, buy.itunes
 # PlaneVPN解锁订阅
 ^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/PlaneVPNProCrack.js
 
-# 蜜桃视频解锁无限次数
-\/t\w{4}\/\d\/t\/ url 307 /token/aa1dceb9b04740e2c09623342303c6ef/t/
-^https?:\/\/.*\.youbangjiazheng\.com\/api\/Video\/m3u8\/id.+ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/MTSPCrack.js
+^https:\/\/ap(p|i)\.bilibili\.com\/(pgc\/view\/v\d\/app\/season|x\/v\d\/search\/defaultwords)\?access_key url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
 
-# 健康视频解锁会员
-^https?:\/\/apiw\.9waquan\.com\/sw2\/.+ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/JKSPCrack.js
-
-# 雏鸟短视频解锁会员
-^https?:\/\/.+\.chuniao\..+\/app\/api\/.+ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/CNSPCrack.js
+#可选, 适用于搜索指定地区的番剧
+^https:\/\/app\.bilibili\.com\/x\/v\d\/search(\/type)?\?.+?%20(%E6%B8%AF|%E5%8F%B0|%E4%B8%AD)& url script-request-header https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js
 
 # Notability解锁订阅
 ^https?:\/\/notability\.com\/subscriptions url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NotabilityProCrack.js
 
-# 91视频解锁会员
-^https?:\/\/ap\w{1}\.(weilaixushi|orientlion|qdjdswkj|0954auto)\.com\/m_user\/info url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/91SPCrack.js
+# Picsew解锁专业版
+^https?:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/PicsewProCrack.js
 
-# 麻豆视频解锁会员
-^https?:\/\/api\.(md-ddd1|yh-bzd)\.com\/api\/web\/.+ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/MDSPCrack.js
-
-#微信 去除公众号文章底部广告
+#微信去除公众号文章底部广告
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
 #皮皮虾去广告和水印
 ^https?://.*\.snssdk\.com/bds/(feed/stream|comment/cell_reply|cell/cell_comment|cell/detail|ward/list|user/favorite|user/cell_coment|user/cell_userfeed|user/publish_list) url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Super.js
 
-# > 鱿鱼视频解锁会员
-^https?:\/\/api\.youyu.*\/api\/account\/loginBy(Phone|Password)$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/YYSPCrack.js
-
 #Gear解锁会员永久
 ^https\:\/\/api.revenuecat.com\/v1\/subscribers(.+) url script-response-body https://raw.githubusercontent.com/ThorJsbox/QuanX/master/Rewrite_local/Gearpro.js
-
-# > 拦截100解锁超级会员
-^https?:\/\/tagit\.hyhuo\.com\/cypt\/block100\/get_vip_info$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/Block100SVIPCrack.js
 
 # > 07 人人视频@ddgksf2013
 ^https:\/\/api\.rr\.tv\/user\/privilege\/list url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/rrtv.js
 ^https:\/\/api\.rr\.tv\/ad\/getAll url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/rrtv.js
 ^https:\/\/api\.rr\.tv\/drama\/app\/get_combined_drama_detail url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/rrtv.js
 
-# > 69萝莉解锁会员
-^https?:\/\/h5\.502you\.me\/h5\/login\/loginAccount$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LLSPCrack.js
-
-# 解锁酷我音乐会员➕听书
-^http://(.+).kuwo.cn(/v2/api/user/info|/a.p|/vip/v2/user/vip) url script-response-body https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/kwyy.js
-
-# > NOMO CAM 解锁订阅
-^https?:\/\/nomo\.dafork\.com\/api\/v3\/register\/phone_signin$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NoMoCamProCrack.js
+#sub.store
+^https?:\/\/sub\.store url script-analyze-echo-response https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/sub-store.min.js
