--- a/vlp.conf
+++ b/vlp.conf
@@ -1,5 +1,5 @@
 hostname = nomo.dafork.com, *.kuwo.cn, tagit.hyhuo.com, *.baidu.com, gw.aoscdn.com, buy.itunes.apple.com, ap?.bilibili.com, notability.com, buy.itunes.apple.com, mp.weixin.qq.com, *.snssdk.com, api.revenuecat.com, api.rr.tv, sub.store
-simple_cert_hostname=sub.store, 
+simple_cert_hostname=sub.store, apiios_dq.xiangha.com, appweb_dq.xiangha.com, *.wtzw.com, api.infzm.com, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, i.weread.qq.com,101*.*.*,116.*.*.*,117.*.*.*,120.*.*.*,121.*.*.*,140.*.*.*,183.*.*.*,203*.*.*, vira.llsapp.com, api.account.meitu.com, api.meiyan.com, bt.flashdown365.com, 
 
  # > NOMO CAM 解锁订阅
 ^https?:\/\/nomo\.dafork\.com\/api\/v3\/register\/phone_signin$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/NoMoCamProCrack.js
@@ -46,3 +46,30 @@ simple_cert_hostname=sub.store,
 
 #sub.store
 ^https?:\/\/sub\.store url script-analyze-echo-response https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/sub-store.min.js
+
+# > 菜谱大全(2022.01.19)
+^https?:\/\/apiios_dq\.xiangha\.com\/v\d\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/CaiPuDaQuan.js
+^https?:\/\/appweb_dq\.xiangha\.com\/center\/pay\/home url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/CaiPuDaQuan.js
+
+# > 七猫小说(2022.01.18)
+^https?:\/\/(api-\w+|xiaoshuo)\.wtzw\.com\/api\/v\d\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/QiMaoXiaoShuo.js
+
+# > 南方周末(2022.01.21)
+^https?:\/\/api\.infzm\.com\/mobile\/(user|contents\?|contents\/\d+\?|contents\/\d+\/isview\?|course_borrow|courses\/\d+\?|mall|course_items) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/NanFangZhouMo.js
+
+# > 美图秀秀(2022.01.17)
+^https?:\/\/(h5|api)\.xiuxiu\.meitu\.com\/v\d\/(h\d\/vip|vip|user)\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiTuXiuXiu.js
+
+# > 微信读书(2022.01.16)
+#仅支持5.5.1版本
+^https?:\/\/i\.weread\.qq\.com\/pay\/memberCardSummary url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/WeRead.js
+
+# > 流利说·阅读(2022.01.16)
+^https?:\/\/vira\.llsapp\.com\/api\/v\d\/\w+\/\w+$ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/LiuLiShuo-YueDu.js
+
+# > 美颜相机(2022.01.15)
+^https?:\/\/api\.account\.meitu\.com\/(common\/check_device_login_pwd|users\/show_current\.json) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiYanXiangJi.js
+^https?:\/\/api\.meiyan\.com\/vip\/(user_center\.json|user_info\.json) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiYanXiangJi.js
+
+# > 闪电下载(2022.01.17)
+^https?:\/\/bt\.flashdown365\.com\/resource2\?data\=\w{0,500}$ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/ShanDianXiaZai.js
