--- a/lsp.vlp.conf
+++ b/lsp.vlp.conf
@@ -1,4 +1,4 @@
-hostname = h5*you*, api.youyu*, appa.lingdu2019.cn, txv04.com, *.youbangjiazheng.com, apiw.9waquan.com, *.chuniao.*, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com, api.0954auto.com, api.(md-ddd1|yh-bzd).com,  
+hostname = h5*you*, api.youyu*, appa.lingdu2019.cn, txv04.com, *.youbangjiazheng.com, apiw.9waquan.com, *.chuniao.*, app.weilaixushi.com, api.orientlion.com, app.qdjdswkj.com, api.0954auto.com, api.(md-ddd1|yh-bzd).com,  mtaoapi006.com:8080, shapi.dmg1818.com,
 
  # > 69萝莉解锁会员
 ^https?:\/\/h5.*you.*\/h5\/login\/loginAccount$ url script-response-body https://raw.githubusercontent.com/yqc007/QuantumultX/master/LLSPCrack.js
@@ -27,3 +27,14 @@ hostname = h5*you*, api.youyu*, appa.lingdu2019.cn, txv04.com, *.youbangjiazheng
 
 # 麻豆视频解锁会员
 ^https?:\/\/api\.(md-ddd1|yh-bzd)\.com\/api\/web\/.+ url script-request-header https://raw.githubusercontent.com/yqc007/QuantumultX/master/MDSPCrack.js
+
+#神花破解VIP
+#下载地址
+#https://shzb.live
+^https:\/\/shapi\.(.+)\.(com|cn)\/api\/video\/config\?field=notice url script-response-body http://gjds666.tk/QX/lsj/dmg1818.js
+^https:\/\/shapi\.(.+)\.(com|cn)\/api\/video\/(banner|ad|picture) url script-response-body http://gjds666.tk/QX/lsj/dmg1818.js
+^https:\/\/shapi\.(.+)\.(com|cn)\/api\/video\/user\/data url script-response-body http://gjds666.tk/QX/lsj/dmg1818.js
+
+#雪梨解锁VIP无限看
+#下载地址 https://www.pears.live/?ivcode=J8S1&t=20210917
+^https:\/\/(cn.youku-ca.com|bkcd\.b-cdn.net|souhu.mett.me|m.pearkin.com|www.baidu.com2.club)\/(api\/movie\/WatchMovieNew|api\/account\/IsVip|api\/account\/IndexDetail) url script-response-body http://gjds666.tk/QX/lsj/pear.js
